tests/invalid/scoping/double_define.rs
/*
fail: 1
*/

main(): int {
    {
        a: int;
        a: int;
    }
}